# qatron

./: .cursorignore  .gitignore  INSTALL.md  MIGRATION_COMPLETE.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
cli/qatron-cli/: README.md  pyproject.toml
cli/qatron-cli/qatron_cli/: __init__.py  api_client.py  config.py  main.py
cli/qatron-cli/qatron_cli/commands/: auth.py  init.py  projects.py  runs.py
deployment/docker-compose/: docker-compose.yml  install.sh  manage.sh
deployment/docker-compose/data/minio/.minio.sys/: format.json
deployment/docker-compose/data/postgres/: postmaster.pid
deployment/docker-compose/data/postgres/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
deployment/docker-compose/data/postgres/base/16384/: 1247  1249  1259  1259_fsm  16389  16390  16397  16399  16400  16401  16402  16409  16421  16426  16427  16432  16434  16436  16437  16438  16442  16444  16445  16454  16462  16463  16464  16465  16472  16479  16480  16481  16482  16489  16496  16497  16498  (+84 more)
deployment/docker-compose/data/postgres/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
deployment/docker-compose/data/prometheus/01KHQA1JDBKRM85FV0AVVSF246/: index  meta.json
deployment/docker-compose/data/prometheus/01KHSFPST60QXYZ8F0VBR7SPEE/: index  meta.json
deployment/docker-compose/data/prometheus/01KHV6MPTQTN0EX4MM7S05WCRQ/: index  meta.json
deployment/docker-compose/data/prometheus/01KHVDG95QRA0Z6SB426BN7R31/: index  meta.json
deployment/docker-compose/data/prometheus/01KHVDG9PBVDQEP71NKDZ340MS/: index  meta.json
deployment/docker-compose/data/prometheus/01KHVMC0D6VCZ0B4JTZTVB58PJ/: index  meta.json
deployment/docker-compose/data/prometheus/chunks_head/: 000020
deployment/docker-compose/data/prometheus/wal/: 00000020  00000023
deployment/docker-compose/data/rabbitmq/: .erlang.cookie
deployment/docker-compose/data/redis/: dump.rdb
deployment/helm/qatron/: Chart.yaml  README.md  values.yaml
deployment/observability/: prometheus.yml
deployment/observability/grafana/dashboards/: qatron-overview.json
docs/: IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  PHASE2.md  PRD.md  USER_GUIDE.md
framework/qatron-python/: pyproject.toml
framework/qatron-python/example/: README.md  RUN_TEST.sh  conftest.py  pyproject.toml  pyrightconfig.json  pytest.ini  qatron.yml  requirements.txt  test_amazon.py  test_minimal.py
framework/qatron-python/example/features/: amazon.feature  sample.feature
framework/qatron-python/example/steps/: amazon_steps.py  steps.py
framework/qatron-python/qatron/: __init__.py  api_client.py  config.py  conftest.py  data_fixtures.py  helpers.py  page_object.py
scripts/: ci-poetry-install.sh  install.sh  migrate.sh
services/board/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
services/board/src/: App.tsx  types.ts
services/board/src/api/: auth.ts  client.ts  features.ts  projects.ts  runs.ts
services/board/src/components/: Layout.css  Layout.tsx
services/board/src/pages/: Configuration.css  Configuration.tsx  Dashboard.css  Dashboard.tsx  Infrastructure.css  Infrastructure.tsx  Login.css  Login.tsx  NewRun.css  NewRun.tsx  ProjectFeatures.css  ProjectFeatures.tsx  Projects.css  Projects.tsx  RunDetail.css  RunDetail.tsx  Runs.css  Runs.tsx
services/board/src/store/: authStore.ts
services/control-plane/: ALEMBIC_MIGRATION_NOTES.md  Dockerfile  alembic.ini  pyproject.toml
services/control-plane/alembic/: env.py
services/control-plane/alembic/versions/: 20250218000000_add_prd_gaps_schema.py
services/control-plane/app/: __init__.py  celery_app.py  main.py
services/control-plane/app/api/v1/: __init__.py  auth.py  features.py  internal.py  projects.py  runs.py  service_tokens.py
services/control-plane/app/core/: audit.py  config.py  database.py  dependencies.py  init_db.py  security.py
services/control-plane/app/models/: __init__.py  audit_log.py  dataset.py  environment.py  feature.py  infrastructure.py  organization.py  project.py  role.py  run.py  service_token.py  suite.py  user.py
services/control-plane/app/repositories/: project.py  run.py
services/control-plane/app/schemas/: __init__.py  project.py  run.py  service_token.py  user.py
services/control-plane/app/services/: bdd_parser.py  dataset_validator.py
services/control-plane/app/tasks/: cleanup.py
services/control-plane/qatron_control_plane/: __init__.py
services/control-plane/tests/: __init__.py  conftest.py  test_api.py  test_bdd_parser.py  test_security.py
services/data-manager/: Dockerfile  pyproject.toml
services/data-manager/app/: __init__.py  main.py
services/data-manager/app/api/v1/: __init__.py  datasets.py
services/data-manager/app/core/: config.py  database.py
services/data-manager/app/services/: __init__.py  validation.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/app/: __init__.py  main.py
services/orchestrator/app/api/v1/: __init__.py  runs.py
services/orchestrator/app/core/: celery_app.py  config.py  sharding.py
services/orchestrator/app/tasks/: run_tasks.py
services/orchestrator/tests/: __init__.py  test_api.py  test_smoke.py
services/reporting/: Dockerfile  pyproject.toml
services/reporting/app/: __init__.py  main.py
services/reporting/app/api/v1/: __init__.py  metrics.py  reports.py
services/reporting/app/core/: config.py
services/reporting/app/services/: allure.py  metrics.py
services/worker/: Dockerfile  entrypoint.sh  pyproject.toml
services/worker/app/: __init__.py  artifact_collector.py  config.py  executor.py  server.py
services/worker/qatron_worker/: __init__.py
shared/models/: __init__.py
(+22 files in other folders)
