[tool.poetry]
name = "qatron-worker"
version = "0.1.0"
description = "QAtron Worker Service"
authors = ["QAtron Team"]
packages = [{ include = "qatron_worker" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
pytest = "^7.4.0"
pytest-bdd = "^7.0.0"
pytest-cov = "^4.1.0"
pytest-html = "^4.1.0"
pytest-xdist = "^3.5.0"
allure-pytest = "^2.13.2"
selenium = "^4.15.0"
requests = "^2.31.0"
boto3 = "^1.29.0"
httpx = "^0.25.2"
pyyaml = "^6.0.1"
coverage = "^7.3.4"
gitpython = "^3.1.40"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
